[package]
name = "solana_swap"
version = "1.1.0"
description = "Created with Anchor"
edition = "2021"
author = "zkhalid"
homepage = "https://github.com/zubayr1/solana_swap"
repository = "https://github.com/zubayr1/solana_swap"
keywords = ["solana", "swap", "liquidity_pool"]
categories = ["finance", "cryptography"]
license = "MIT"
readme = "readme.MD"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "6.0.0"